# kali-driver-mcp

./: .gitignore  CLAUDE.md  COMMAND_LOGGING.md  LOGGING.md  LOGGING_GUIDE.md  LOGGING_VERIFICATION.md  MCP_CLIENT_GUIDE.md  MCP_DOCS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUDO_GUIDE.md  TEST_RESULTS.md  TOOLS_QUICK_REFERENCE.md  TOOLS_REFERENCE.md  analyze_logs.py  demo_logging.py  examples.py  mcp_client_example.py  pyproject.toml  pytest.ini  setup.sh  test_client.py
src/kali_driver_mcp/: __init__.py  config.py  logging_config.py  server.py  ssh_manager.py
src/kali_driver_mcp/tools/: code_sync.py  driver_compile.py  driver_load.py  execute_command.py  file_ops.py  kernel_info.py  log_viewer.py  network_info.py  network_monitor.py  packet_capture.py
tests/: conftest.py  test_config.yaml  test_config.yaml.example
tests/integration/: test_ssh_connection.py  test_tools_integration.py
tests/unit/: test_config.py  test_ssh_manager.py  test_tools.py
